--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <nav class="nav-bar">
-        <a href="index.html">Home</a>
-        <a href="./html/about.html">About Me</a>
-        <a href="./html/artworks.html">Artworks</a>
-    </nav>
+    <div class="container">
+        <div class="navigation">
+            <a href="index.html">Home</a>
+            <a href="./html/about.html">About Me</a>
+            <a href="./html/artworks.html">Artworks</a>
+        </div>
+        <div class="body">
+            This is the body part.
+
+        </div>
+    </div>
+    
 </body>
 </html>
